Ensure link in  "You're not viewing the latest stable version" banner is readable in light and dark theme (#793)

--- a/docs/source/css/extra.css
+++ b/docs/source/css/extra.css
@@ -101,3 +101,9 @@ td p {
 .md-button {
   margin-top: 1rem !important;
 }
+
+/* Ensure the link in the "You're not viewing the latest stable version" banner is
+  readable in both dark and light theme. */
+:root {
+  --md-typeset-a-color: var(--md-default-fg-color);
+}
